hphp/hack/test/typecheck/assignment_sequencing/binop_rw.php.exp
File "binop_rw.php", line 8, characters 17-17:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "binop_rw.php", line 8, characters 17-18:
Unsequenced modification and access to local variable. Modified here (Typing[4143])
File "binop_rw.php", line 8, characters 10-11:
And accessed here
